# libmatsya

./: CMakeLists.txt  PKGBUILD
accounts/: CMakeLists.txt  qmldir
audio/: CMakeLists.txt  context.cpp
audio/qml/: PulseObjectFilterModel.qml  plugin.cpp  qmldir
bluez/: CMakeLists.txt  DevicesModel.qml  bluezqtextensionplugin.cpp  bluezqtextensionplugin.h  qmldir
bluez/applet/: bluetoothmanager.cpp
build-bluez-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-bluez-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-4801e6122daf7c0365f5.json  cmakeFiles-v1-5f9908d5cffca5be58d1.json  codemodel-v2-4bc9dd72728eca664119.json  directory-.-Debug-c0d99b0be8e0b7f24997.json  index-2022-08-16T17-24-44-0953.json  target-KF5BluezQt_QCH-Debug-471d7eec100ee7029444.json  target-matsyabluez_qmlplugins-Debug-ca69b20775477097e323.json
build-bluez-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-bluez-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: Adapter.D426B6C1C659BADF.idx  Agent.90ADD8B877CC3BC4.idx  Device.3A068CF91483A2EE.idx  DevicesModel.05781CFD371D99B2.idx  InitManagerJob.807749305BE7965D.idx  Input.196E3D1CC4322B60.idx  Manager.B7B5AC87526BE492.idx  MediaPlayer.F7238FBD5621F928.idx  PendingCall.36EF410EDF490AF4.idx  QAbstractListModel.1426AF42394766CC.idx  QFile.FDB606D45EC47A79.idx  QHash.5B19050924531E2F.idx  QList.6095E68C017DF8F4.idx  QMap.6C74F5F67488F559.idx  (+88 more)
mpris/: CMakeLists.txt  qmldir
networkmanagement/: CMakeLists.txt  qmldir
screen/: CMakeLists.txt  qmldir
system/: CMakeLists.txt  qmldir  wallpaper.cpp
